css/langer.css
.lang-current {
    cursor: pointer;
    user-select: none;
    position: relative;
}

.lang-options {
    display: none;
}

.lang-options div {
    cursor: pointer;
}

.lang-options div:hover {
    font-weight: bold;
}

